<resources>
    <string name="app_name">HomeWeatherStation</string>
    <string name="days">CHARTS</string>
    <string name="measurements">MEASUREMENTS</string>
    <string name="controller">CONTROLLER</string>
    <string name="measurement_time">TIME</string>
    <string name="measurement_temp">TEMP</string>
    <string name="measurement_number">NUMBER</string>
    <string name="measurement_date">DATE</string>
    <string name="measurement">MEASUREMENT</string>
    <string name="esp8266_led">ESP8266 LED</string>
    <string name="rpi_led">LED</string>
    <string name="measurement_last_meas_title">Latest measurements</string>
    <string name="peripherals_control_title">Control outputs</string>
    <string name="days_charts_title">Charts</string>
    <string name="actual_charts_title">Actual values</string>
    <string name="donut_title">insolation</string>
    <string name="donut_max">maximal</string>
    <string name="donut_curr">current</string>
    <string name="donut_title_temp">temperature</string>
    <string name="on">ON</string>
</resources>
