<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme"
    style="@style/AppTheme"
    android:columnCount="1"
    android:padding="5dp"
    android:rowCount="2"
    tools:context=".activities.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_column="0"
        android:layout_row="0"
        android:orientation="vertical">

        <Button
            android:id="@+id/all_meas"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:onClick="clickedAllMeasButton"
            android:text="@string/measurements"
            android:textColor="@color/primary_text"
            android:background="@drawable/meas_512"/>

        <Button
            android:id="@+id/all_days"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:onClick="clickedAllDaysButton"
            android:text="@string/days"
            android:textColor="@color/primary_text"
            android:background="@drawable/days_512"/>

        <Button
            android:id="@+id/ctrl_leds"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:onClick="clickedPeripheralsControlButton"
            android:text="@string/controller"
            android:textColor="@color/primary_text"
            android:background="@drawable/control_512"/>
    </LinearLayout>
</GridLayout>